# Mirt-AI

./: .dockerignore  .editorconfig  .env.example  .env.railway  .gitignore  CHECKPOINTER_ANALYSIS.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_FIX_SUMMARY.md  DEV_SYSTEM_GUIDE.md  DOCUMENTATION.md  Dockerfile  Makefile  PRD.md  README.md  README_SCHEMA_CREATION.md  README_agents.md  SECURITY.md  agent_error.txt  analysis_old_conversation_py.md  architecture_guide_ua.md  collection_errors.txt  dependency_report.json  diag.py  docker-compose.yml  fix_all_tables.sql  fix_all_tables_v2.sql  followup_error.txt  followup_error_2.txt  full superpower.md  nixpacks.toml  order_model_error.txt  pyproject.toml  railway.json  railway.toml  repro_vision.py  requirements.txt  run_manychat.py  start.sh  test_checkpointer_database.py  test_checkpointer_http.py  (+9 more)
.cursor/plans/: full_3f4862d3.plan.md  prod_2f76d581.plan.md  supabase_to_postgresql_migration_516864af.plan.md  supabase_to_postgresql_migration_zb_v6.md
.github/workflows/: ci.yml
.rules/: rulesllm.md
client_script/: CATALOG_MODELS.yaml  MIRT_FULL_RULES.yaml  README.md
data/: ANALYSIS_CONFLICTS_AND_DUPLICATES.md  catalog.csv  catalog.json  system_prompt_full.yaml  system_prompt_full.yaml.backup  vision_guide.json
data/client_config/: MIRT_FULL_RULES.yaml
data/domain/: intents.yaml  states.yaml
data/prompts/: base.yaml  few_shot_examples.yaml  gemini.yaml  gpt.yaml  grok.yaml  prompt_variants.yaml
data/vision/: README.md  eval_accuracy.py  generate.py  products_master.yaml  vision_main.md
docs/: AB_TESTING.md  ADR_vision_ledger.md  AGENTS_ARCHITECTURE.md  ARCHITECTURE.md  AUDIT_REPORT_2024_12_11.md  CELERY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_VPS.md  DEV_SYSTEM_GUIDE.md  ENV_MIGRATION_GUIDE.md  FSM_TRANSITION_TABLE.md  IMPLEMENTATION_STATUS.md  MANYCHAT_PUSH_MODE.md  MANYCHAT_SETUP.md  OBSERVABILITY_RUNBOOK.md  POSTGRES_MIGRATION_STATUS.md  PRODUCTION_IMPROVEMENT_PLAN.md  PRODUCTION_RUNBOOK.md  PROMPT_ENGINEERING.md  README.md  REMEDIATION_PLAN.md  SESSION_WAITING_ANALYSIS.md  SITNIKS_INTEGRATION.md  STATUS.md  STATUS_REPORT.md  SUPABASE_SCHEMA_UPGRADE.sql  SUPABASE_TABLES_ROADMAP.md  TESTING.md  TEST_STRATEGY_AUDIT.md  architecture_rules.md  deployment  test-debt-cleanup.md
docs/adr/: vision_identity.md
docs/architecture/: AGENTS_ARCHITECTURE.md  ARCHITECTURE.md  FSM_TRANSITION_TABLE.md  SERVICES_LAYER_REFACTOR_METRICS.md
docs/audits/: AUDIT_REPORT_2024_12_11.md
docs/database/: POSTGRES_CATALOG_SYNC.md  POSTGRES_ENV_SETUP.md  SUPABASE_TABLES_ROADMAP.md
docs/dependencies/: DEPENDENCY_ANALYSIS.md  DEPENDENCY_FIX_SUMMARY.md
docs/deployment/: DEPLOYMENT_VPS.md  STARTUP_LOGS.md  STARTUP_VALIDATION_IMPLEMENTATION.md  TROUBLESHOOTING_RUNBOOK.md
docs/development/: CONTRIBUTING.md  DEV_SYSTEM_GUIDE.md  PROMPT_ENGINEERING.md
docs/integrations/: MANYCHAT_PUSH_MODE.md  MANYCHAT_SETUP.md
docs/observability/: OBSERVABILITY_RUNBOOK.md
docs/operations/: CELERY.md  STATUS_REPORT.md
docs/quality/: CRITICAL_ISSUES_SENIOR_REVIEW.md  DUPLICATE_PREPARED_STATEMENT_FIX.md  ERROR_HANDLING_POLICY.md  FEATURE_FLAGS_POLICY.md  FINAL_AUDIT_REPORT.md  FIXES_STATUS.md  HONEST_SELF_REVIEW.md  KOSTYLI_ANALYSIS.md  KOSTYLI_CLEANUP_REPORT.md  KOSTYLI_REGISTRY.md  PRODUCTION_READINESS_DEEP_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  PYDANTICAI_LANGGRAPH_QUALITY_ASSESSMENT.md  PYDANTICAI_LANGGRAPH_USAGE.md  README.md  SAFEGUARDS_RULES.md  SAFEGUARDS_TESTS_SUMMARY.md  TEST_BRANCH_IMPROVEMENTS.md  VERIFICATION_CHECKLIST.md
docs/review/: AI_LAYER_REVIEW.md
docs/status/: IMPLEMENTATION_STATUS.md  SESSION_WAITING_ANALYSIS.md  STATUS_REPORT.md
docs/testing/: DRY_RUN_TESTING.md
scripts/: README_TELEGRAM_BOT.md  add_product.py  analyze_supabase_data.py  catalog_to_csv.py  check_all_products.py  check_dependencies.py  check_schema.py  create_match_rpc.sql  debug_catalog.py  generate_vision_artifacts.py  lint_prompts.py  migrate_price_by_size.py  quick_test_prices.py  run_db_migration.py  run_memory_tests.py  run_migration.py  run_migration_v2.py  run_sql_schema.py  run_sql_schema_railway.sh  run_worker.py  supabase_analysis.json  sync_catalog.py  sync_catalog_to_supabase.py  sync_products_master_to_db.py  test_async_graph.py  test_langgraph_full.py  test_postgres_stores.py  test_price_by_size.py  test_prompts_dry_run.py  test_real_api.py  test_real_llm.py  test_real_supabase.py  test_sitniks_api.py  test_sitniks_api_v2.py  test_sitniks_api_v3.py  test_sitniks_chat_api.py  test_stress.py  test_workers.py  test_workers_real.py  update_mriya_prices.py
scripts/catalog/: add_product.py  catalog_to_csv.py  sync_catalog.py  sync_catalog_to_supabase.py  update_mriya_prices.py
scripts/deploy/: run_worker.py  start_telegram_bot.ps1
scripts/dev/: check_all_products.py  check_schema.py  delete_webhook.py  generate_vision_artifacts.py  quick_test_prices.py  run_memory_tests.py
scripts/sql/: 004_add_summarize_inactive_users.sql  (+11 more)
src/: run.py  verify_100_plan.py
test_results/: api_test_20251201_044741.json  api_test_20251201_051100.json  api_test_20251201_052858.json
tests/: conftest.py  conftest_memory.py  golden_data.yaml  manual_registry_test.py  pytest_summary.py  test_agent.py  test_catalog.py  test_checkpoint_persistence.py  test_client_parser.py  test_config_safety.py  test_escalation_level_contract.py  test_followups.py  test_fsm_invariants.py  test_golden_flows.py  test_graph.py  test_graph_v2.py  test_guard_scenarios.py  test_manychat.py  test_manychat_followup.py  test_matrix.yaml  test_message_validator.py  test_model_rules_integrity.py  test_moderation.py  test_nodes.py  test_order_model.py  test_output_contract.py  test_output_parser.py  test_payment_phases_regression.py  test_payment_routing_fix.py  test_persistence.py  test_product_adapter.py  test_product_matcher.py  test_prompt.py  test_response_metadata_contract.py  test_rules_cart_intent.py  test_rules_offer_transition.py  test_rules_payment_proof.py  test_state_flow.py  test_state_machine.py  test_state_transitions_comprehensive.py  (+10 more)
tools/: diagnose_conversation.py
(+494 files in other folders)
