[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirt-ai"
version = "1.0.0"
description = "AI-powered shopping assistant for MIRT children's clothing brand"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MIRT Team"}
]
keywords = ["ai", "chatbot", "shopping", "langgraph", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Application
    "pydantic-ai==1.23.0",
    "langgraph==1.0.4",
    "openai==2.9.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    # Server & Networking
    "fastapi==0.115.2",
    "uvicorn==0.32.0",
    "httpx==0.28.1",
    "aiogram==3.15.0",
    # Database & External Services
    "supabase==2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==0.28.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==0.28.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/mirt/mirt-ai"
Documentation = "https://github.com/mirt/mirt-ai#readme"
Repository = "https://github.com/mirt/mirt-ai"

[project.scripts]
mirt-bot = "src.bot.telegram_bot:run_polling"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: contract/schema tests",
    "critical: critical-path tests",
    "e2e: end-to-end tests",
    "regression: regression tests",
    "security: security tests",
    "smoke: smoke tests",
    "manychat: ManyChat-related tests",
    "telegram: Telegram-related tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E402",    # import not at top - needed for some configs
    "E722",    # bare except
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW0603", # global statement - used for singletons
    "PLW2901", # loop variable overwritten
    "PLC0415", # import not at top - lazy imports for circular deps
    "ARG001",  # unused function argument - required by interfaces
    "ARG002",  # unused method argument - required by interfaces
    "ARG003",  # unused class method argument
    "RUF001",  # ambiguous unicode (cyrillic) - intentional for Ukrainian
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
    "RUF012",  # mutable class attributes
    "PTH123",  # Path.open
    "B904",    # raise from
    "SIM102",  # nested if
    "ERA001",  # commented code
    "F821",    # undefined name - false positive for TypeAlias
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "langgraph.*",
    "pydantic_ai.*",
    "aiogram.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
