[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirt-ai"
version = "1.0.0"
description = "AI-powered shopping assistant for MIRT children's clothing brand"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MIRT Team"}
]
keywords = ["ai", "chatbot", "shopping", "langgraph", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Application
    # OPTIMIZED: Use pydantic-ai-slim with only openai and logfire extras
    # This reduces dependency resolution time from ~5min to ~30s
    # NOTE: pydantic-ai 1.23.0 doesn't have extras, must use pydantic-ai-slim
    "pydantic-ai-slim[openai,logfire]==1.23.0",
    "langgraph==1.0.4",
    "openai>=1.107.2",
    # FIXED: realtime 2.27.0 requires pydantic>=2.11.7, aiogram 3.23.0 requires pydantic<2.13
    "pydantic>=2.11.7,<2.13",
    "pydantic-settings==2.7.1",
    # Server & Networking
    "fastapi==0.120.0",
    "uvicorn==0.32.0",
    "httpx==0.27.2",
    "aiogram==3.23.0",
    # Database & External Services
    # FIXED: Pin supabase dependencies to avoid backtracking
    "supabase==2.9.1",
    # Pin sub-dependencies to avoid pip backtracking (realtime, postgrest, storage3)
    "realtime==2.27.0",
    "postgrest==0.17.2",
    "storage3==0.8.2",
    # FIXED: Pin version to avoid backtracking
    "langgraph-checkpoint-postgres==3.0.2",
    # FIXED: Pin version to avoid backtracking
    "psycopg[binary,pool]==3.3.2",
    # Background Tasks
    # FIXED: Pin versions to avoid backtracking
    "celery==5.6.0",
    "redis==7.1.0",
    "kombu==5.6.1",
    "flower==2.0.1",
    # Monitoring
    # FIXED: Pin versions to avoid backtracking
    "sentry-sdk[celery,fastapi]==2.48.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-instrumentation==0.60b1",
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",  # Fast JSON serialization for checkpointer compaction
    # Build system
    "setuptools>=68.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/mirt/mirt-ai"
Documentation = "https://github.com/mirt/mirt-ai#readme"
Repository = "https://github.com/mirt/mirt-ai"

[project.scripts]
mirt-bot = "src.bot.telegram_bot:run_polling"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--durations=10",
    "--durations-min=0.5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: marks contract tests",
    "critical: marks critical paths",
    "smoke: marks smoke tests",
    "telegram: marks telegram-specific tests",
    "manychat: marks manychat-specific tests",
    "regression: marks regression tests",
    "e2e: marks end-to-end tests",
    "security: marks security tests",
    "unit: marks unit tests",
    "vision: marks vision-related tests",
    "summarization: marks summarization tests",
    "client_data: marks client data parsing tests",
    "catalog: marks catalog/matching tests",
    "worker: marks background worker tests",
    "db: marks database related tests",
    "manual: marks manual/interactive tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E402",    # import not at top - needed for some configs
    "E722",    # bare except
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW0603", # global statement - used for singletons
    "PLW2901", # loop variable overwritten
    "PLC0415", # import not at top - lazy imports for circular deps
    "ARG001",  # unused function argument - required by interfaces
    "ARG002",  # unused method argument - required by interfaces
    "ARG003",  # unused class method argument
    "RUF001",  # ambiguous unicode (cyrillic) - intentional for Ukrainian
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
    "RUF012",  # mutable class attributes
    "PTH123",  # Path.open
    "B904",    # raise from
    "SIM102",  # nested if
    "ERA001",  # commented code
    "F821",    # undefined name - false positive for TypeAlias
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "langgraph.*",
    "pydantic_ai.*",
    "aiogram.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
